<resources>
    <string name="app_name">CalorieFit Trainer</string>
    <string name="hello">Hello</string>
    <string name="weekly_statistics">Weekly Statistics</string>
    <string name="kcal_burnt">Kcal Burnt</string>
    <string name="total_time">Total Time</string>
    <string name="exercises">Exercises</string>
    <string name="stay_fit_and_healthy">Stay Fit and Healthy</string>
    <string name="popular_workout">Popular Workout</string>
    <string name="push_your_limit">Push Your Limit</string>
    <string name="types_of_exercise">Types of Exercise</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="test">test test test test</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="fat_mass">Fat Mass</string>
    <string name="activities">Activities</string>
    <string name="bicycle">Bicycle</string>
    <string name="running">Running</string>
    <string name="training">Training</string>
    <string name="calorie_counter">Calorie counter</string>
    <string name="enter_the_number">Enter the number of kilometers on the bike</string>
    <string name="up_to_1000">Up to 1000 km</string>
    <string name="you_have_not_entered">You have not entered the distance traveled</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_duration">Enter Duration</string>
    <string name="view_program">View Program</string>
    <string name="detail">Detail</string>
    <string name="video_is_not_available_now">Video is not available now</string>
    <string name="burns">Burns</string>
    <string name="duration">Duration</string>
    <string name="age">Age</string>
    <string name="desc1">Brisk walking is a low-impact exercise that raises your heart rate and keeps you active. It\'s perfect for beginners seeking to enhance fitness while enjoying the outdoors. This workout involves walking at an accelerated pace, effectively burning calories and improving cardiovascular health. Whether in your neighborhood or on scenic trails, brisk walking is a simple way to stay fit. Incorporate it into your daily routine for a healthier lifestyle.</string>
    <string name="title1">Brisk Walking</string>
    <string name="desc2">Cycling is a fantastic cardiovascular workout that combines fun and fitness. Hop on your bike and explore the great outdoors while improving your physical well-being. This low-impact activity is suitable for riders of all levels, making it an excellent choice for beginners and enthusiasts alike. Whether you\'re pedaling leisurely or tackling challenging trails, cycling helps burn calories and strengthen leg muscles. Embrace the joy of cycling for a healthier and more active lifestyle.</string>
    <string name="title2">Cycling</string>
    <string name="desc3">Swimming offers a refreshing and effective way to stay fit while enjoying the water. It\'s a full-body workout that engages your muscles and elevates your heart rate, making it an excellent choice for both leisure and fitness. This low-impact exercise is particularly gentle on the joints, making it suitable for individuals of all ages and fitness levels. Whether you\'re doing laps in a pool or taking a dip in natural waters, swimming burns calories, enhances cardiovascular health, and improves overall strength. Dive into the world of swimming for a healthier, more active lifestyle.</string>
    <string name="title3">Swimming</string>
    <string name="desc4">Yoga is a holistic practice that promotes physical and mental well-being through a combination of gentle postures, controlled breathing, and meditation. It\'s ideal for individuals seeking balance, flexibility, and stress relief. Whether you\'re a beginner or an experienced yogi, yoga offers a wide range of routines to suit your needs. This low-impact exercise not only enhances core strength and flexibility but also cultivates mindfulness and relaxation. By incorporating yoga into your daily routine, you can achieve a more harmonious and health-conscious lifestyle.</string>
    <string name="title4">Yoga</string>
    <string name="desc5">Stretching is a vital component of any fitness routine, offering numerous benefits for the body and mind. It involves gentle and deliberate movements to improve flexibility and range of motion. Regular stretching can reduce the risk of injury, alleviate muscle tension, and enhance overall posture. Whether as part of a warm-up or cool-down, stretching exercises help promote relaxation and reduce stress levels. Incorporating stretching into your daily regimen can contribute to a more balanced and physically resilient lifestyle.</string>
    <string name="title5">Stretching</string>
    <string name="lessons">Lessons: </string>
    <string name="workout_example">Workout example</string>
    <string name="calories">Calories</string>
    <string name="calories_burned">Calories burned: </string>
    <string name="you_haven_t_specified_what_sport_you_ve_played_yet">You haven\'t specified what sport you\'ve played yet</string>
    <string name="go_to_your_profile_to_set_this_data">Go to your profile to set this data</string>
    <string name="set_a_plan_for_the_week">Set a plan for the week</string>
    <string name="monday">Monday: </string>
    <string name="tuesday">Tuesday: </string>
    <string name="wednesday">Wednesday: </string>
    <string name="thursday">Thursday: </string>
    <string name="friday">Friday: </string>
    <string name="saturday">Saturday: </string>
    <string name="sunday">Sunday: </string>
    <string name="monday1">Monday</string>
    <string name="tuesday1">Tuesday</string>
    <string name="wednesday1">Wednesday</string>
    <string name="thursday1">Thursday</string>
    <string name="friday1">Friday</string>
    <string name="saturday1">Saturday</string>
    <string name="sunday1">Sunday</string>
    <string name="enter_the_number_of_calories_from_1_to_1000">Enter the number of calories from 1 to 1000</string>
    <string name="watch_the_video">Watch the video</string>
    <string name="_34">34</string>
    <string name="_0_kcal">0 kcal</string>
    <string name="_0">0</string>
    <string name="_0_kg">0 kg</string>
    <string name="kg">kg</string>
    <string name="kcal">kcal</string>
    <string name="numbers_must_be_between_1_and_1000">Numbers must be between 1 and 1000</string>
    <string name="age1">Age: </string>
    <string name="invalid_age_value_valid_range_is_10_to_100">Invalid age value (valid range is 10 to 100)</string>
    <string name="enter_your_weight_kg">Enter your weight (kg)</string>
    <string name="from_40_kg_to_150_kg">From 40 kg to 150 kg</string>
    <string name="wrong_weight_value">Wrong weight value</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="from_70_cm_to_200_cm">From 70 cm to 200 cm</string>
    <string name="cm">cm</string>
    <string name="wrong_growth_value">Wrong growth value</string>
    <string name="_30_60_minutes">30-60 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="enter_the_number_of_kilometers_you_have_run">Enter the number of kilometers you have run</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules1">Hello. This is an application for tracking the right lifestyle. Here you will find the information you need about various sports activities.</string>
    <string name="rules2">And also you can find out how many calories you spent for a particular sport</string>
</resources>