<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.ProfileFragment">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_height"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="@drawable/card_back"
                android:elevation="6dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height" />

                <TextView
                    android:id="@+id/tv_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/_0"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_weight"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="@drawable/card_back"
                android:elevation="6dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight" />

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/_0_kg"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_year_old"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="@drawable/card_back"
                android:elevation="6dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="0"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_plan_to_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/card_back"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_plan" />

            <TextView
                android:id="@+id/monday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tuesday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wednesday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/thursday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/friday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/saturday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sunday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/card_back"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/calorie_counter"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_bicycle"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:background="@drawable/card_back"
                android:elevation="6dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_bicycle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bicycle" />

                <TextView
                    android:id="@+id/bicycle_calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/_0_kcal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_run"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:background="@drawable/card_back"
                android:elevation="6dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_run" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/running" />

                <TextView
                    android:id="@+id/run_calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/_0_kcal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_simple_training"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:background="@drawable/card_back"
                android:elevation="6dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_sport" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/training" />

                <TextView
                    android:id="@+id/sport_calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/_0_kcal" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>