<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".presentation.fragments.FirstFragment">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hello">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly_statistics"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_calorie"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/card_back"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_calorie" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kcal_burnt"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/calorie_burned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="3"
                    android:paddingHorizontal="10dp"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_exercises"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/card_back"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_training" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_exercises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="3"
                    android:paddingHorizontal="10dp"
                    android:text="@string/_34" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_plan_to_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/card_back"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_plan" />

            <TextView
                android:id="@+id/monday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tuesday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/wednesday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/thursday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/friday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/saturday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sunday_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>